<resources>
    <string name="app_name">Fragment</string>
    <string name="drawer_open">Open Navigation</string>
    <string name="drawer_close">Close Navigation</string>
    <string name="email_input">Enter your email</string>
    <string name="password_input">Enter your password</string>
    <string name="first_name_input">Enter first name</string>
    <string name="last_name_input">Enter last name</string>
    <string name="repeat_password_input">Repeat password</string>
    <string name="sign_in_btc">Sign In</string>
    <string name="register_btn">Register</string>
    <string name="invalid_email">Please enter valid email</string>
    <string name="all_fields_empty">Please fill the fields</string>
    <string name="first_name_empty">Please enter your first name</string>
    <string name="last_name_empty">Please enter your last name</string>
    <string name="email_empty">Please enter your email</string>
    <string name="password_empty">Please enter your password</string>
    <string name="repeat_password_empty">Please repeat your password</string>
    <string name="password_no_match">Passwords do not match</string>
    <string name="incorrect_authorization">Email or password incorrect</string>
    <string name="first_player_winner">Player 1 is winner</string>
    <string name="second_player_winner">Player 2 is winner</string>
    <string name="next_image_btn">Next Image</string>
    <string name="user_name">Mikheil Maisuradze</string>
    <string name="user_email">mikheil.maisuradze.1@btu.edu.ge</string>
    <string name="play_again">Play Again</string>
    <string name="draw">Draw</string>
    <string name="exit">Exit</string>
    <string name="add_button">Add</string>
    <string name="delete_button">Delete</string>
    <string name="show_all_button">Show All</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="gallery">Gallery</string>
    <string name="game">Game</string>
    <string name="calculator">Calculator</string>
    <string name="admin">Admin</string>





    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_passwordless">Passwordless Authentication</string>
    <string name="desc_passwordless">Use only an email to authenticate with Firebase.</string>

    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="passwordless_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="passwordless_title_text">Passwordless Sign In</string>
    <string name="status_email_not_sent">Send link to your email to get started.</string>
    <string name="status_email_sent">Link sent, check your email to continue.</string>
    <string name="status_link_found">Link received, enter email to sign in.</string>

    <string name="phone_title_text">Phone Number</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="loading">Loading...</string>
</resources>
