<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:gravity="center"
              tools:context=".AdminFragment">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <EditText
                android:id="@+id/edittext_first_name"
                android:hint="@string/first_name_input"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <EditText
                android:id="@+id/edittext_last_name"
                android:hint="@string/last_name_input"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <EditText
                android:id="@+id/edittext_email"
                android:hint="@string/email_input"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <EditText
                android:id="@+id/edittext_password"
                android:hint="@string/password_input"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <Button
                android:id="@+id/button_add_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/add_button"
                android:textColor="@color/white"
                android:background="@drawable/rounded_button"
                android:layout_margin="10dp"/>

        <Button
                android:id="@+id/button_delete_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/delete_button"
                android:textColor="@color/white"
                android:background="@drawable/rounded_button"
                android:layout_margin="10dp"/>

        <Button
                android:textColor="@color/white"
                android:id="@+id/button_show_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/show_all_button"
                android:background="@drawable/rounded_button"
                android:layout_margin="10dp"/>
    </LinearLayout>
    <TextView
            android:id="@+id/textview_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <LinearLayout
            android:id="@+id/ll_entries"
            android:padding="15dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    </LinearLayout>
</LinearLayout>