<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/registerFragmentLayout"
        tools:context=".RegisterFragment">
    <LinearLayout
            android:layout_gravity="top"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColorHint="#FF0000"
                android:maxLines="1"
                android:inputType="text"
                android:id="@+id/firstNameRegisterEditText"
                android:hint="@string/first_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <EditText
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColorHint="#FF0000"
                android:maxLines="1"
                android:inputType="text"
                android:id="@+id/lastNameRegisterEditText"
                android:hint="@string/last_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <EditText
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColorHint="#FF0000"
                android:maxLines="1"
                android:inputType="textEmailAddress"
                android:id="@+id/emailRegisterEditText"
                android:hint="@string/email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <EditText
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColorHint="#FF0000"
                android:maxLines="1"
                android:inputType="textPassword"
                android:id="@+id/passwordRegisterEditText"
                android:hint="@string/password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <EditText
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColorHint="#FF0000"
                android:maxLines="1"
                android:inputType="textPassword"
                android:id="@+id/repeatPasswordRegisterEditText"
                android:hint="@string/repeat_password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </LinearLayout>
    <Button
            android:id="@+id/registerActivityButton"
            android:textColor="#FFFFFF"
            android:background="@drawable/rounded_button"
            android:textAllCaps="false"
            android:text="@string/register_btn"
            android:layout_gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
</FrameLayout>